# ItmoStuff

./: .gitmodules  hello.asm  readme.md
fse/lab3/: pom.xml
pl/lab2/: colon.inc  dict.asm  dict.inc  lib.asm  lib.inc  main.asm  makefile  test.py  words.inc
pl/lab3/: .gitignore
pl/lab4/src/: mem.c  mem.h
pl/lab5/: .gitignore  .gitlab-ci.yml  CMakeLists.txt
pl/lab5/solution/: CMakeLists.txt
pl/lab5/tester/: CMakeLists.txt  simd_tester.cmake  speed_tester.cmake  tester.cmake
pl/lab5/tester/src/: file_cmp.c
programming-languages/lab1/: lib.inc
programming/lab6/Client/: build.gradle
programming/lab7/Client/: build.gradle
programming/semester-1/lab2/: .gitignore
programming/semester-2/lab5/: build.gradle
reports/: .gitignore
reports/computational-maths/lab1/: report.tex
reports/fpa/lab4/: report.tex
reports/fpa/lab5/: report.tex
reports/fpa/lab7/: report.tex
reports/fse/lab1/: report.tex
reports/fse/lab2/: report.tex
reports/fse/lab3/: report.tex
reports/informatics/lab3/: INF_LAB_3.py
reports/informatics/lab5/: INF_LAB_5_TASK.xlsx  INF_LAB_5_TASK_ADD.xlsx  INF_LAB_5_TASK_PROCESSED.csv  TASK_5.py
reports/informatics/lab6/: lab.tex  report.tex  task.tex
reports/physics/lab1/: measurement_protocols.xlsx  report.tex
reports/probability-theory/homework-2/: report.tex
reports/probability-theory/practical-task-6/: report.tex
reports/template/: report.tex
reports/template-physics/: report.tex
web-programming/lab1/: canvas.js  graph.frag  index.css  index.js
web-programming/lab2/: build.gradle
web/lab1/: index.css  index.js  index.php  validator.php
(+460 files in other folders)
